<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding.n1"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ima"
            android:layout_width="wrap_content"
            android:layout_height="277dp"
            android:layout_gravity="center"
            android:layout_marginLeft="200dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32dp"
      >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif"

            android:text="@string/asica"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <Button

            android:id="@+id/d1"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/stylesnt"
            android:text="@string/Dex" />

        <Button

            android:id="@+id/s1"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/stylesnt"
            android:text="@string/select" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif"

            android:text="@string/asica1"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <Button

            android:id="@+id/d2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/stylesnt"
            android:text="@string/Dex" />

        <Button

            android:id="@+id/s2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/stylesnt"
            android:text="@string/select" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif"

            android:text="@string/asica2"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <Button

            android:id="@+id/d3"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/stylesnt"
            android:text="@string/Dex" />

        <Button

            android:id="@+id/s3"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/stylesnt"
            android:text="@string/select" />



    </LinearLayout>

    <EditText
        android:id="@+id/etselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/et_style"
        android:fontFamily="sans-serif"
        android:hint="@string/selecapp"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:textAlignment="center"

        >

    </EditText>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/et_style"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:textColorHint="@color/colorPrimary"
        android:textAlignment="center"
        >
    </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="22dp"
            android:gravity="center"
            >

            <Button

                android:id="@+id/btnIn"
                android:layout_width="157dp"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/stylesnt"
                android:text="@string/in" />



        </LinearLayout>







</LinearLayout>